--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: d
 script:
     - ./configure
     - make linux64
+    - make tests
     - ARMQ_HOST=localhost ./configure r3
     - make linux64
     - ARMQ_HOST=localhost ./configure prefix
