--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,4 @@
-language: d
+language: c
 
 script:
-    - ./configure
-    - make linux
-    - make test
-    - ARMQ_HOST=localhost ./configure r3
-    - make linux
-    - ARMQ_HOST=localhost ./configure prefix
-    - make linux
+    - make
